Add PR and issue creation conditions

--- a/.github/workflows/webhook-test.yml
+++ b/.github/workflows/webhook-test.yml
@@ -1,7 +1,11 @@
 name: build
 on:
   pull_request:
-
+    branches:
+      - develop
+  issues:
+    types:
+      - opened
 jobs:
   testJob:
     runs-on: ubuntu-latest
