new .github folder

--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -1,4 +1,4 @@
-name: Feature Request
+name: Feature Request 1
 description: Request a new feature or an enhancement to an existing one
 title: "[Feature Request]: "
 labels: ["feature-request", "feature-enhancement"]
