--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,59 +1,110 @@
-name: 🐞 Bug
-description: File a bug/issue
-title: "[BUG] <title>"
-labels: [Bug, Needs Triage]
+name: Feature Request 1 (bug.yml)
+description: Request a new feature or an enhancement to an existing one
+title: "[Feature Request]: "
+labels: ["feature-request", "feature-enhancement"]
 body:
-- type: checkboxes
-  attributes:
-    label: Is there an existing issue for this?
-    description: Please search to see if an issue already exists for the bug you encountered.
-    options:
-    - label: I have searched the existing issues
+  - type: markdown
+    attributes:
+      value: |
+        Thank you for your submission
+  - type: textarea
+    id: request-name
+    attributes:
+      label: Name of this request
+      placeholder: "example: Component for squirrel profiles"
+    validations:
       required: true
-- type: textarea
-  attributes:
-    label: Current Behavior
-    description: A concise description of what you're experiencing.
-  validations:
-    required: false
-- type: textarea
-  attributes:
-    label: Expected Behavior
-    description: A concise description of what you expected to happen.
-  validations:
-    required: false
-- type: textarea
-  attributes:
-    label: Steps To Reproduce
-    description: Steps to reproduce the behavior.
-    placeholder: |
-      1. In this environment...
-      2. With this config...
-      3. Run '...'
-      4. See error...
-  validations:
-    required: false
-- type: textarea
-  attributes:
-    label: Environment
-    description: |
-      examples:
-        - **OS**: Ubuntu 20.04
-        - **Node**: 13.14.0
-        - **npm**: 7.6.3
-    value: |
-        - OS:
-        - Node:
-        - npm:
-    render: markdown
-  validations:
-    required: false
-- type: textarea
-  attributes:
-    label: Anything else?
-    description: |
-      Links? References? Anything that will give us more context about the issue you are encountering!
-
-      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
-  validations:
-    required: false
+  - type: input
+    id: contact
+    attributes:
+      label: Contact Details
+      description: How can we get in touch with you if we need more info?
+      placeholder: ex. netid@uic.edu
+    validations:
+      required: true
+  - type: dropdown
+    id: dev-status
+    attributes:
+      label: "Can you contribute to the codebase for this feature?"
+      multiple: false
+      options:
+        - No
+        - Yes
+  - type: textarea
+    id: vc-unit
+    attributes:
+      label: Campus unit
+      description: "Please enter your VC unit or College if applicable"
+    validations:
+      required: true
+  - type: textarea
+    id: what-happened
+    attributes:
+      label: What happened?
+      description: Also tell us, what did you expect to happen?
+      placeholder: Tell us what you see!
+      value: "A bug happened!"
+    validations:
+      required: true
+  - type: checkboxes
+    id: use-cases
+    attributes:
+      label: What best fits your motivations for this request? Check all that apply.
+      options:
+        - label: Better marketing and/or branding
+          required: false
+        - label: Assists with recruitment
+          required: false
+        - label: Improves experience for a site visitor
+          required: false
+        - label: Improves experience for a WordPress user (site admin, editor, etc)
+          required: false
+        - label: Needed for data collection
+          required: false
+  - type: textarea
+    id: propose-solution
+    attributes:
+      label: "Propose a solution"
+    validations:
+      required: true
+  - type: textarea
+    id: who-will-use
+    attributes:
+      label: "Who will use this feature?"
+    validations:
+      required: true
+  - type: textarea
+    id: who-will-benefit
+    attributes:
+      label: "Who benefit from this feature?"
+    validations:
+      required: true
+  - type: textarea
+    id: is-feature-necessary
+    attributes:
+      label: "Is this feature necessary for a particular Red site to function?"
+    validations:
+      required: true
+  - type: checkboxes
+    id: terms
+    attributes:
+      label: " This request may involve"
+      options:
+        - label: I agree to follow this project's Code of Conduct
+          required: true
+        - label: Component
+          required: false
+        - label: Custom Post type
+          required: false
+        - label: Plugin
+          required: false
+        - label: Acquisition of a paid license
+          required: false
+        - label: Other/I don't know
+          required: false
+  - type: textarea
+    id: provide-links-solutions
+    attributes:
+      label: "Please provide links to similar solutions found on other sites (if applicable)"
+    validations:
+      required: false
