--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -1,42 +1,22 @@
-name: Feature Request 1
-description: Request a new feature or an enhancement to an existing one
-title: "[Feature Request]: "
-labels: ["feature-request", "feature-enhancement"]
+name: Bug Report
+description: File a bug report
+title: "[Bug]: "
+labels: ["bug", "triage"]
+assignees:
+  - octocat
 body:
   - type: markdown
     attributes:
       value: |
-        Thank you for your submission
-  - type: textarea
-    id: request-name
-    attributes:
-      label: Name of this request
-      placeholder: "example: Component for squirrel profiles"
-    validations:
-      required: true
+        Thanks for taking the time to fill out this bug report!
   - type: input
     id: contact
     attributes:
       label: Contact Details
       description: How can we get in touch with you if we need more info?
-      placeholder: ex. netid@uic.edu
+      placeholder: ex. email@example.com
     validations:
-      required: true
-  - type: dropdown
-    id: dev-status
-    attributes:
-      label: "Can you contribute to the codebase for this feature?"
-      multiple: false
-      options:
-        - No
-        - Yes
-  - type: textarea
-    id: vc-unit
-    attributes:
-      label: Campus unit
-      description: "Please enter your VC unit or College if applicable"
-    validations:
-      required: true
+      required: false
   - type: textarea
     id: what-happened
     attributes:
@@ -46,65 +26,37 @@ body:
       value: "A bug happened!"
     validations:
       required: true
-  - type: checkboxes
-    id: use-cases
+  - type: dropdown
+    id: version
     attributes:
-      label: What best fits your motivations for this request? Check all that apply.
+      label: Version
+      description: What version of our software are you running?
       options:
-        - label: Better marketing and/or branding
-          required: false
-        - label: Assists with recruitment
-          required: false
-        - label: Improves experience for a site visitor
-          required: false
-        - label: Improves experience for a WordPress user (site admin, editor, etc)
-          required: false
-        - label: Needed for data collection
-          required: false
-  - type: textarea
-    id: propose-solution
-    attributes:
-      label: "Propose a solution"
+        - 1.0.2 (Default)
+        - 1.0.3 (Edge)
     validations:
       required: true
-  - type: textarea
-    id: who-will-use
+  - type: dropdown
+    id: browsers
     attributes:
-      label: "Who will use this feature?"
-    validations:
-      required: true
+      label: What browsers are you seeing the problem on?
+      multiple: true
+      options:
+        - Firefox
+        - Chrome
+        - Safari
+        - Microsoft Edge
   - type: textarea
-    id: who-will-benefit
+    id: logs
     attributes:
-      label: "Who benefit from this feature?"
-    validations:
-      required: true
-  - type: textarea
-    id: is-feature-necessary
-    attributes:
-      label: "Is this feature necessary for a particular Red site to function?"
-    validations:
-      required: true
+      label: Relevant log output
+      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      render: shell
   - type: checkboxes
     id: terms
     attributes:
-      label: " This request may involve"
+      label: Code of Conduct
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
-        - label: Component
-          required: false
-        - label: Custom Post type
-          required: false
-        - label: Plugin
-          required: false
-        - label: Acquisition of a paid license
-          required: false
-        - label: Other/I don't know
-          required: false
-  - type: textarea
-    id: provide-links-solutions
-    attributes:
-      label: "Please provide links to similar solutions found on other sites (if applicable)"
-    validations:
-      required: false
