--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -1,9 +1,9 @@
 name: Bug Report 2
 description: File a bug report
 title: "[Bug]: "
-labels: ["bug", "triage"]
-assignees:
-  - octocat
+# labels: ["bug", "triage"]
+# assignees:
+#   - octocat
 body:
   - type: markdown
     attributes:
