--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -1,6 +1,6 @@
 name: Bug Report 2
 description: File a bug report
-title: "[Bug]: "
+title: "[Feature Reqest]: "
 # labels: ["bug", "triage"]
 # assignees:
 #   - octocat
