--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -23,28 +23,11 @@ body:
       placeholder: ex. netid@uic.edu
     validations:
       required: true
-  - type: dropdown
+  - type: checkboxes
     id: dev-status
     attributes:
       label: "Can you contribute to the codebase for this feature?"
-      multiple: false
       options:
-        - No
-        - Yes
-  - type: textarea
-    id: vc-unit
-    attributes:
-      label: Campus unit
-      description: "Please enter your VC unit or College if applicable"
-    validations:
-      required: true
-  - type: textarea
-    id: what-happened
-    attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
-    validations:
-      required: true
+        - label: Yes
+          required: false
 
