--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -23,6 +23,13 @@ body:
       placeholder: ex. netid@uic.edu
     validations:
       required: true
+  - type: dropdown
+    id: dev-status
+    attributes:
+      label: "Can you contribute to the codebase for this feature?"
+      multiple: true
+      options:
+        - Yes
   - type: textarea
     id: vc-unit
     attributes:
