--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -28,7 +28,8 @@ body:
     attributes:
       label: "Can you contribute to the codebase for this feature?"
       options:
-      - Yes
+        - "No"
+        - "Yes"
   - type: textarea
     id: vc-unit
     attributes:
