--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -1,7 +1,7 @@
 name: Feature Request
-description: File a bug report
-title: "[Bug]: "
-labels: ["bug", "triage"]
+description: Request a new feature or enhancement of an existing one
+title: "[Feature Request]: "
+labels: ["feature-request", "enhancement-request"]
 
 body:
   # - type: markdown
@@ -18,8 +18,7 @@ body:
   - type: input
     id: contact
     attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
+      label: Your email
       placeholder: "netid@uic.edu"
     validations:
       required: true
@@ -30,7 +29,7 @@ body:
       options:
         - label: "Yes"
           required: false
-  - type: textarea
+  - type: input
     id: vc-unit
     attributes:
       label: Campus unit
@@ -55,7 +54,7 @@ body:
       label: "Who benefit from this feature?"
     validations:
       required: true
-  - type: textarea
+  - type: input
     id: is-feature-necessary
     attributes:
       label: "Is this feature necessary for a particular Red site to function?"
