--- a/.github/ISSUE_TEMPLATE/feature_template.yml
+++ b/.github/ISSUE_TEMPLATE/feature_template.yml
@@ -27,8 +27,7 @@ body:
   - type: input
     id: vc-unit
     attributes:
-      label: Campus unit
-      description: "Please enter your VC unit or College if applicable"
+      label: Vice Chancellor Unit/College and your department
     validations:
       required: true
   - type: checkboxes
