--- a/.github/ISSUE_TEMPLATE/feature_template.yml
+++ b/.github/ISSUE_TEMPLATE/feature_template.yml
@@ -32,7 +32,7 @@ body:
     validations:
       required: true
   - type: checkboxes
-    id: terms
+    id: dev-status
     attributes:
       label: "Can you contribute to the codebase for this feature?"
       options:
