--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: GitHub Community Support
-    url: https://github.com/orgs/community/discussions
-    about: Please ask and answer questions here.
-  - name: GitHub Security Bug Bounty
-    url: https://bounty.github.com/
-    about: Please report security vulnerabilities here.
+  - name: Red developer documentation
+    url: https://develop.red.uic.edu/
+    about: Codebase documentation for web developers
+  - name: Red Multsite service
+    url: https://red.uic.edu/
+    about: General information about the Wordpress Multisite service, User & administrative support
