--- a/.github/ISSUE_TEMPLATE/feature_template.yml
+++ b/.github/ISSUE_TEMPLATE/feature_template.yml
@@ -96,5 +96,14 @@ body:
           required: false
         - label: Acquisition of a paid license
           required: false
+        - label: External vendors
+          required: false
         - label: Other/I don't know
           required: false
+  - type: textarea
+    id: additional-information
+    attributes:
+      label: Additional information"
+      description: "To attach files: (1) click in the text box below and (2) drag & drop the files into the box. If you want to submit a screenshot but don't know how, [follow these instructions](https://www.take-a-screenshot.org/)"
+    validations:
+      required: false
