--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -71,6 +71,6 @@ body:
     id: describe-problem
     attributes:
       label: "Describe the problem"
-      description: "To attach files: (1) click in the text box below and (2) drag & drop the files into the box."
+      description: "To attach files: (1) click in the text box below and (2) drag & drop the file(s) into the box. If you want to submit a screenshot but don't know how, [follow these instructions](https://www.take-a-screenshot.org/)"
     validations:
       required: true
