--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -10,37 +10,37 @@ body:
   #       Thank you for your submission
 
   - type: input
-    id: contact-name
+    id: issue-contact-name
     attributes:
       label: Your name
       placeholder: "Your name"
     validations:
       required: true
   - type: input
-    id: contact-email
+    id: issue-contact-email
     attributes:
       label: Your email
       placeholder: "netid@uic.edu"
     validations:
       required: true
   - type: input
-    id: vc-unit
+    id: issue-vc-unit
     attributes:
       label: VC Unit/College and your department name
       placeholder: "Vice Chancellor for Innovation, Office of Intergalactic Outreach"
     validations:
       required: true
   - type: checkboxes
-    id: dev-status
+    id: issue-dev-status
     attributes:
       label: "Can you contribute to the codebase for this issue?"
       options:
         - label: "Yes"
           required: false
-  - type: input
-    id: url
+  - type: textarea
+    id: issue-url
     attributes:
-      label: "The full URL where the issue occurs. E.g. - https://uic.edu"
+      label: "The full URL where the issue occurs. E.g.  https://uic.edu"
       placeholder: "https://uic.edu"
     validations:
       required: true
@@ -60,14 +60,14 @@ body:
         - label: Other
           required: false
   - type: checkboxes
-    id: error-message
+    id: issue-error-message
     attributes:
       label: "Do you see an error message?"
       options:
         - label: "Yes"
           required: false
   - type: textarea
-    id: describe-problem
+    id: issue-describe-problem
     attributes:
       label: "Describe the problem"
       description: "To attach files: (1) click in the text box below and (2) drag & drop the file(s) into the box. If you want to submit a screenshot but don't know how, [follow these instructions](https://www.take-a-screenshot.org/)"
