--- a/.github/workflows/webhook-test.yml
+++ b/.github/workflows/webhook-test.yml
@@ -1,11 +1,7 @@
 name: build
 on:
   pull_request:
-    branches:
-      - develop
-  issues:
-    types:
-      - opened
+
 jobs:
   testJob:
     runs-on: ubuntu-latest
@@ -24,9 +20,9 @@ jobs:
       - uses: freezer00/teams-webhook-action@v1.0.0
         with:
           webhook_url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-          # needs: ${{ toJson(needs) }}
+          needs: ${{ toJson(needs) }}
           job: ${{ toJson(job) }}
-          title: ${{ github.event_name }}
+          title: Custom title
           additional_button_title: |-
             Link to Google
             Link to Microsoft
@@ -34,4 +30,3 @@ jobs:
             https://google.com
             https://www.microsoft.com/de-de/microsoft-teams
           dry_run: false
-
