--- a/.github/workflows/webhook-test.yml
+++ b/.github/workflows/webhook-test.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: freezer00/teams-webhook-action@v1.0.0
         with:
           if: ${{ github.event_name }} == 'issues'
-          title: Issue
+          title: "Issue:" ${{ github.event.issue.title }}
           webhook_url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           needs: ${{ toJson(needs) }}
           job: ${{ toJson(job) }}
