--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -3,10 +3,6 @@ on:
   pull_request:
     branches:
       - develop
-  issues:
-    types:
-      - opened
-
 jobs:
   testJob:
     runs-on: ubuntu-latest
@@ -26,18 +22,8 @@ jobs:
         uses: freezer00/teams-webhook-action@v1.0.0
         if: ${{ <github.event_name> }} == 'pull_request'
         with:
-          title: Pull request
+          title: ${{ github.event.pull_request.title }}
           webhook_url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           needs: ${{ toJson(needs) }}
           job: ${{ toJson(job) }}
           dry_run: false
-      - name: Webhook
-        uses: freezer00/teams-webhook-action@v1.0.0
-        if: ${{ <github.event_name> }} == 'issues'
-        with:
-          title: ${{ github.event.issue.title }}
-          webhook_url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-          needs: ${{ toJson(needs) }}
-          job: ${{ toJson(job) }}
-          dry_run: false
-
