--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -4,24 +4,15 @@ on:
     branches:
       - develop
 jobs:
-  # testJob:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - run: |
-  #         exit 0
-  build:
+  lol:
     name: Checkout and notify
-    # needs: [ TestJob ]
-    if: ${{always()}}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v1
+      # - name: Checkout Code
+      #   uses: actions/checkout@v1
       - uses: freezer00/teams-webhook-action@v1.0.0
         with:
           title: Pull request
           webhook_url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-          # needs: ${{ toJson(needs) }}
           job: ${{ toJson(job) }}
           dry_run: false
