--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -1,8 +1,8 @@
 name: Wocka wocka wocka
 on:
   pull_request:
-    branches:
-      - develop
+    types: [ opened, synchronize, reopened ]
+    branches: [ develop ]
 jobs:
   lol:
     name: Post Teams notification
@@ -12,3 +12,6 @@ jobs:
         with:
           title: Pull request
           webhook_url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
+      - uses: kceb/pull-request-url-action@v1
+        id: pr-url
+      - run: echo "${{ steps.pr-url.outputs.url }}"
