--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -10,7 +10,8 @@ jobs:
     env:
       pr_link: ${{ steps.pr-url.outputs.url }}
     steps:
-      - uses: kceb/pull-request-url-action@v1
+      - name: testing
+        uses: kceb/pull-request-url-action@v1
         id: pr-url
       - uses: freezer00/teams-webhook-action@v1.0.0
         with:
