--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -4,21 +4,24 @@ on:
     types: [ opened, synchronize, reopened ]
     branches: [ develop ]
 jobs:
-  lol:
-    name: Post Teams notification
+  build:
+    name: Checkout and notify
+    needs: [ TestJob ]
+    if: ${{always()}}
     runs-on: ubuntu-latest
-    env:
-      pr_link: ${{ steps.pr-url.outputs.url }}
     steps:
-      - name: testing
-        uses: kceb/pull-request-url-action@v1
-        id: pr-url
+      - name: Checkout Code
+        uses: actions/checkout@v1
       - uses: freezer00/teams-webhook-action@v1.0.0
         with:
-          title: Pull request
           webhook_url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
+          needs: ${{ toJson(needs) }}
+          job: ${{ toJson(job) }}
+          title: Custom title
           additional_button_title: |-
             Link to Google
+            Link to Microsoft
           additional_button_url: |-
-            ${{ pr_link }}
-
+            https://google.com
+            https://www.microsoft.com/de-de/microsoft-teams
+          dry_run: false
