--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -1,12 +1,10 @@
-name: Check notification
+name: This is the workflow name
 
 on:
   pull_request:
-    branches:
-      - develop
+    branches: [ develop ]
   issues:
-    types:
-      - opened
+    types: [ opened ]
 
 jobs:
   notify:
@@ -16,16 +14,16 @@ jobs:
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-          title: ${{ github.event.issue.title }}
-          message: <p>This is my <strong>awesome message!</strong></p>
+          title: Argh ${{ github.event.issue.title }}
+          message: message goes here
           color: ff69b4
           buttons: |
-            Click here! https://whatever.com/foo/
-            Or here… https://somewhere.com/bar/
+            'Button 1' https://uic.edu/
+            'Button number two' https://red.uic.edu/
           sections: |
             -
-              activityTitle: TESTNAME
-              activitySubtitle: 9/13/2016, 3:34pm
+              activityTitle: activityTitle
+              activitySubtitle: activitySubtitle, timestamp?
               facts:
                 -
                   name: "github.event_name"
@@ -46,4 +44,4 @@ jobs:
                   name: "github.action"
                   value: ${{ github.action }}
 
-              text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              text: Lorem ipsum 
